Cria página do Apoiador

--- a/curso/index.html
+++ b/curso/index.html
@@ -33,13 +33,13 @@
                         <a href="/simulador">Simulador</a>
                     </li>
                     <li>
-                        <a href="#SejaParceiro">Seja Parceiro</a>
+                        <a href="/apoiador">Seja Parceiro</a>
                     </li>
                     <li>
                         <a href="#contato">Contato</a>
                     </li>
                     <li>
-                        <a href="#equipe">Equipe</a>
+                        <a href="/equipe">Equipe</a>
                 </ul>
             </nav>
         </div>
